--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         
         <label for="email">Email:</label>
         <input type="email" id="email" name="user-email">
-        <span id="email-invalid">Email must be validly formatted, such as name@company.com</span>
+        <span id="email-invalid-format">Email must be validly formatted, such as name@company.com</span>
+        <span id="email-invalid-blank">Email filed may not be left empty. Please enter a validly formatted email, such as name@company.com</span>
         
         <label for="title">Job Role</label>
         <select id="title" name="user-title">
