Fix name validation - no longer accepts numbers

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <label for="name">Name:</label>
         <input type="text" id="name" name="user-name">
-        <span id="name-invalid">Name field can not be blank</span>
+        <span id="name-invalid">Name field may not be blank nor contain numbers</span>
         
         <label for="email">Email:</label>
         <input type="email" id="email" name="user-email">
